tests/ui/static/bad-const-type.stderr
error[E0308]: mismatched types
  --> $DIR/bad-const-type.rs:1:20
   |
LL | static i: String = 10;
   |                    ^^- help: try using a conversion method: `.to_string()`
   |                    |
   |                    expected `String`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
